Add optional dependencies for doc requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ description = "Python library for the vShield API."
 requires-python = ">=3.10"
 dependencies = ["httpx", "httpx[http2]"]
 
+[project.optional-dependencies]
+docs = ["sphinx>=3.4.0",  "sphinx-toolbox", "enum-tools", "sphinx-rtd-theme"]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
