--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ docs = [
   "sphinx-rtd-theme",
   "pycountry",
 ]
+testing = ["Flask>=3.0.2", "anyio>=4.3.0"]
 
 [build-system]
 requires = ["hatchling"]
