--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.black]
-target-version = ["py311"]
+target-version = ["py312"]
 include = '''
 (
   ^.*\.py
@@ -37,6 +37,7 @@ exclude = ["examples", "docs"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+"tests/*" = ["D"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
