--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ docs = [
   "enum-tools",
   "sphinx-rtd-theme",
 ]
-testing = ["Flask>=3.0.2", "anyio>=4.3.0"]
+testing = ["Flask>=3.0.2", "anyio>=4.3.0", "pytest-env>=1.1.3"]
 
 [build-system]
 requires = ["hatchling"]
