--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,14 @@
 name = "vshieldpy"
 version = "0.0.1"
 authors = [{ name = "Tayfun Bocek", email = "tayfunbocek@live.ca" }]
-description = "Python library for the vShield API."
+description = "Python library for interacting with the vShield API."
+readme = "README.md"
 requires-python = ">=3.10"
+classifiers = [
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent"
+]
 dependencies = ["httpx", "httpx[http2]"]
 
 [project.optional-dependencies]
@@ -14,6 +20,10 @@ docs = [
   "sphinx-rtd-theme",
 ]
 testing = ["Flask>=3.0.2", "anyio[trio]>=4.3.0", "pytest-env>=1.1.3"]
+
+[project.urls]
+Homepage = "https://github.com/airblast-dev/vshieldpy"
+Issues = "https://github.com/airblast-dev/vshieldpy/issues"
 
 [build-system]
 requires = ["hatchling"]
