--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,14 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent"
 ]
-dependencies = ["httpx", "httpx[http2]"]
+dependencies = ["httpx[http2]>=0.27.0"]
 
 [project.optional-dependencies]
 docs = [
   "sphinx>=3.4.0",
-  "sphinx-toolbox",
-  "enum-tools",
-  "sphinx-rtd-theme",
+  "sphinx-toolbox>=3.5.0",
+  "enum-tools>=0.11.0",
+  "sphinx-rtd-theme>=2.0.0",
 ]
 testing = ["Flask>=3.0.2", "anyio[trio]>=4.3.0", "pytest-env>=1.1.3"]
 
