--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,17 @@ description = "Python library for interacting with the vShield API."
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
-  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "License :: OSI Approved :: MIT License",
-  "Operating System :: OS Independent"
+  "Environment :: Web Environment",
+  "Operating System :: OS Independent",
+  "Intended Audience :: Developers"
 ]
 dependencies = ["httpx[http2]>=0.27.0"]
+keywords = ["vshield", "web", "servers", "vps", "virtaul server"]
 
 [project.optional-dependencies]
 docs = [
