--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,9 +6,7 @@ build:
     python: "3.12"
 sphinx:
   configuration: docs/conf.py
-formats:
-  - pdf
-  - epub
+formats: all
 python:
   install:
     - method: pip
