--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ docs = [
   "enum-tools>=0.11.0",
   "sphinx-rtd-theme>=2.0.0",
 ]
-testing = ["Flask>=3.0.2", "anyio[trio]>=4.3.0", "pytest-env>=1.1.3"]
+testing = ["Flask>=3.0.2", "anyio>=4.3.0", "pytest-env>=1.1.3"]
 dev = ["vshieldpy[testing]", "ruff"]
 
 [project.urls]
